--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <div style="color:blue">
+    <div style="color:Black">
         <form action="{{ url_for('predict')}}" method="post">
-            <h2>Predictive analysis</h2>
+            <h2 "color:red">Predictive analysis</h2>
             <h3>Year</h3>
             <input id="first" name="Year" type="number ">
             <h3>What is the Showroom Price?(In lakhs)</h3><br><input id="second" name="Present_Price" required="required">
@@ -40,7 +40,7 @@
 
 
 
-        <br><br><h3>{{ prediction_text }}<h3>
+        <br><br><h3 "color:red" >{{ prediction_text }}<h3>
     </div>
 
 
@@ -116,7 +116,7 @@
         
         #sub {
             width: 120px;
-            height: 43px;
+            height: 86px;
             text-align: center;
             border-radius: 14px;
             font-size: 18px;
