--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
     <div style="color:Black">
         <form action="{{ url_for('predict')}}" method="post">
-            <h2 "color:red">Predictive analysis</h2>
+            <h2 style="color:red">Predictive analysis</h2>
             <h3>Year</h3>
             <input id="first" name="Year" type="number ">
             <h3>What is the Showroom Price?(In lakhs)</h3><br><input id="second" name="Present_Price" required="required">
@@ -40,7 +40,7 @@
 
 
 
-        <br><br><h3 "color:red" >{{ prediction_text }}<h3>
+        <br><br><h3 style="color:red" >{{ prediction_text }}<h3>
     </div>
 
 
