--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
 
 
-        <br><br><h3 style="color:red" >{{ prediction_text }}<h3>
+        <br><br><h3 style="color:red" >{{ prediction_text }} lacs<h3>
     </div>
 
 
